增加终端功能
